tests/expectations/parser/type_/signature_verify_bad_syntax_fail.out
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'async', 'block', 'network', 'self' -- found 'signature'
    --> test:4:23
     |
   4 |         let a: bool = signature.verify(s, a, v);
     |                       ^^^^^^^^^
Error [EPAR0370005]: expected ';' -- found ','
    --> test:4:41
     |
   4 |         let a: bool = signature.verify(s, a, v);
     |                                         ^
Error [EPAR0370005]: expected ')' -- found ','
    --> test:5:17
     |
   5 |         assert(a, b);
     |                 ^
Error [EPAR0370047]: expected parameter name
    --> test:13:20
     |
  13 |     transition foo(signature: field) -> u8 {
     |                    ^^^^^^^^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found ':'
    --> test:13:29
     |
  13 |     transition foo(signature: field) -> u8 {
     |                             ^
Error [EPAR0370047]: expected function name
    --> test:17:16
     |
  17 |     transition signature(foo: field) -> u8 {
     |                ^^^^^^^^^
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found '('
    --> test:17:25
     |
  17 |     transition signature(foo: field) -> u8 {
     |                         ^
Error [EPAR0370021]: The type of `s` has no associated function `verify` that takes 3 argument(s).
    --> test:9:23
     |
   9 |         let b: bool = s.verify(a, a, v);
     |                       ^^^^^^^^^^^^^^^^^
